--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="tools.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="简洁在线工具集合：JSON格式化、URL编解码、二维码、Hash、Base64。隐私优先，完全在本地浏览器中处理。" />
     <link rel="manifest" href="manifest.webmanifest" />
